dbeaver/pro#7020 Panel toolbar update fix